Updated catta url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "catta"]
 	path = catta
-	url = git://meshlink.io/catta
+	url = https://github.com/elear-solutions/catta.git
 	branch = develop
 [submodule "src/utcp"]
 	path = src/utcp
