Ensure -export-symbols-regex is not lost.
An earlier commit accidentily caused libmeshlink_la_LDFLAGS to be
overwritten later in src/Makefile.am, and this caused
-export-symbols-regex to be dropped, thereby exposing internal symbols
of the library.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -86,7 +86,7 @@ if MINGW
 libmeshlink_la_CFLAGS += -I${top_srcdir}/catta/src/compat/windows/include/
 endif
 
-libmeshlink_la_LDFLAGS = $(PTHREAD_LIBS)
+libmeshlink_la_LDFLAGS += $(PTHREAD_LIBS)
 libmeshlink_la_LIBADD = ${top_builddir}/catta/src/libcatta.la
 
 libmeshlink_la_SOURCES += \
