--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "catta"]
 	path = catta
-	url = https://github.com/elear-solutions/catta.git
-	branch = develop
+	url = git@github.com:elear-solutions/catta.git
+	branch = Sprint18
 [submodule "src/utcp"]
 	path = src/utcp
 	url = https://github.com/elear-solutions/utcp.git
