--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "catta"]
 	path = catta
-	url = git@github.com:elear-solutions/catta.git
+	url = https://github.com/elear-solutions/catta.git
 	branch = Sprint18
 [submodule "src/utcp"]
 	path = src/utcp
