Add COPYING.README, detailing license obligations for users of MeshLink.
MeshLink itself depends on other libraries, and this document mainly
summarizes what obligations users of the MeshLink library have when they
distribute their software in binary form.

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,9 @@ SUBDIRS =  catta src doc test examples
 
 ACLOCAL_AMFLAGS = -I m4 
 
-EXTRA_DIST = README.android
+EXTRA_DIST = \
+	COPYING.README \
+	README.android
 
 ChangeLog:
 	git log > ChangeLog
