Allow compiling without support for Catta.
Configuring with --disable-catta will cause MeshLink to not be linked to
the Catta library, and local discovery will not be available.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,13 @@
 
 AUTOMAKE_OPTIONS = gnu
 
-SUBDIRS =  catta src doc test examples
+if CATTA
+MAYBE_CATTA = catta
+endif
+
+SUBDIRS = $(MAYBE_CATTA) src doc test examples
+
+DIST_SUBDIRS = $(SUBDIRS)
 
 ACLOCAL_AMFLAGS = -I m4 
 
