--- a/test/blackbox/test_case_join_01/Makefile.am
+++ b/test/blackbox/test_case_join_01/Makefile.am
@@ -1,7 +1,9 @@
-check_PROGRAMS = node_sim_peer node_sim_relay
+check_PROGRAMS = node_sim_relay node_sim_peer
 
-node_sim_peer: ../test_case_meta_conn_01/node_sim_peer
-	../util/install_node_sim_copy.sh test_case_meta_conn_01 peer
+node_sim_peer_SOURCES = node_sim_peer.c ../common/common_handlers.c ../common/test_step.c 
+node_sim_peer_LDADD = ../../../src/libmeshlink.la
+node_sim_peer_CFLAGS = -D_GNU_SOURCE
 
-node_sim_relay: ../test_case_meta_conn_01/node_sim_relay
-	../util/install_node_sim_copy.sh test_case_meta_conn_01 relay
+node_sim_relay_SOURCES = node_sim_relay.c ../common/common_handlers.c ../common/test_step.c
+node_sim_relay_LDADD = ../../../src/libmeshlink.la
+node_sim_relay_CFLAGS = -D_GNU_SOURCE
