Add an example using curses to monitor the state of MeshLink.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = meshlinkapp chat chatpp manynodes channels
+noinst_PROGRAMS = meshlinkapp chat chatpp manynodes channels monitor
 
 AM_CPPFLAGS = $(PTHREAD_CFLAGS) -I${top_srcdir}/src -iquote. -Wall
 AM_LDFLAGS = $(PTHREAD_LIBS)
@@ -17,3 +17,6 @@ manynodes_LDADD = ${top_builddir}/src/libmeshlink.la
 
 channels_SOURCES = channels.c
 channels_LDADD = ${top_builddir}/src/libmeshlink.la
+
+monitor_SOURCES = monitor.c
+monitor_LDADD = ${top_builddir}/src/libmeshlink.la -lcurses -lm
