--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,7 @@
 [submodule "catta"]
-	path = catta
-	url = git@github.com:catta-x/catta.git
-	branch = develop
+        path = catta
+        url = git://meshlink.io/catta
+        branch = develop
 [submodule "src/utcp"]
-	path = src/utcp
-	url = git@github.com:meshlink/utcp.git
-	branch = master
+        path = src/utcp
+        url = git://meshlink.io/utcp
