--- a/test/blackbox/.gitignore
+++ b/test/blackbox/.gitignore
@@ -1,19 +1,12 @@
-#*/
-# Ignore all
-*
-# Unignore all files with extensions
-!*.*
-# Unignore all directories
-!*/
-
-# The above three commands combined will ignore all files without extensions
-# The commands below specify patterns to specifically ignore
-*.log
-*.o
-*.trs
-*conf*
-.deps
-.dirstamp
-Makefile.in
-.libs
 gen_invite
+*.cbp
+*.depend
+*.layout
+bin
+obj
+test
+node_sim*
+.deps
+.libs
+Makefile
+Makefile.in
