made some changes in .git files

--- a/test/blackbox/test_case_join_01/.gitignore
+++ b/test/blackbox/test_case_join_01/.gitignore
@@ -1,6 +1,14 @@
+test
+bin
+obj
+.libs
+.deps
+*.o
+*.cbp
+*.layout
+*depend
+node_sim_peer
+node_sim_nut
+node_sim_relay
 Makefile
 Makefile.in
-*.o
-test
-node_sim_relay
-node_sim_peer 
