added meshlink API test vectors

--- a/test/blackbox/.gitignore
+++ b/test/blackbox/.gitignore
@@ -1,19 +1,10 @@
-#*/
-# Ignore all
-*
-# Unignore all files with extensions
-!*.*
-# Unignore all directories
-!*/
-
-# The above three commands combined will ignore all files without extensions
-# The commands below specify patterns to specifically ignore
 *.log
 *.o
 *.trs
 *conf*
 .deps
 .dirstamp
+Makefile
 Makefile.in
 .libs
-geninvite
+gen_invite
