--- a/test/blackbox/Makefile.am
+++ b/test/blackbox/Makefile.am
@@ -1,15 +1,11 @@
 check_PROGRAMS = gen_invite
 SUBDIRS =                     \
 	run_blackbox_tests          \
-	test_case_join_01           \
-	test_case_join_02           \
 	test_case_meta_conn_01      \
 	test_case_meta_conn_02      \
 	test_case_meta_conn_03      \
 	test_case_meta_conn_04      \
-	test_case_meta_conn_05      \
-	test_case_set_status_cb_01  \
-	test_case_set_status_cb_02 	
+	test_case_meta_conn_05      
 
 
 gen_invite_SOURCES = util/gen_invite.c common/common_handlers.c common/test_step.c common/mesh_event_handler.c 
