--- a/test/.gitignore
+++ b/test/.gitignore
@@ -1,18 +1,19 @@
-#*/
-# Ignore all
-*
-# Unignore all files with extensions
-!*.*
-# Unignore all directories
-!*/
-
-# The above three commands combined will ignore all files without extensions
-# The commands below specify patterns to specifically ignore
 *.log
 *.o
 *.trs
 *conf*
 .deps
 .dirstamp
+Makefile
 Makefile.in
 .libs
+basic
+basicpp
+channels
+channels-cornercases
+channels-fork
+echo-fork
+import-export
+invite-join
+sign-verify
+trio
