--- a/test/blackbox/run_blackbox_tests/Makefile.am
+++ b/test/blackbox/run_blackbox_tests/Makefile.am
@@ -44,7 +44,8 @@ run_blackbox_tests_SOURCES = \
 	test_cases_channel_open.c \
 	test_cases_channel_close.c \
 	test_cases_channel_send.c \
-	test_cases_channel_shutdown.c
+	test_cases_channel_shutdown.c \
+	test_cases_channel_conn.c
 
 run_blackbox_tests_LDADD = ../../../src/libmeshlink.la -llxc -lcmocka
 run_blackbox_tests_CFLAGS = -D_GNU_SOURCE
