Fixed few test issues occurred while running

--- a/test/blackbox/test_case_meta_conn_02/.gitignore
+++ b/test/blackbox/test_case_meta_conn_02/.gitignore
@@ -1,14 +1,9 @@
-test
-bin
-obj
-.libs
 .deps
-*.o
-*.cbp
-*.layout
-*depend
-node_sim_peer
-node_sim_nut
-node_sim_relay
-Makefile
+.libs
 Makefile.in
+Makefile
+*.o
+node_sim_nut
+node_sim_peer
+node_sim_relay
+test/
