Add support for encrypted storage.
This is a large overhaul of how configuration files are handled. All files
are now in PackMessage format, and are read from disk in to memory in one
go, and also saved to disk from memory in one go, using functions in conf.c.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,6 +5,7 @@ TESTS = \
 	channels-fork.test \
 	channels-cornercases.test \
 	duplicate.test \
+	encrypted.test \
 	import-export.test \
 	invite-join.test \
 	sign-verify.test \
@@ -27,6 +28,7 @@ check_PROGRAMS = \
 	channels-cornercases \
 	duplicate \
 	echo-fork \
+	encrypted \
 	import-export \
 	invite-join \
 	sign-verify \
@@ -56,6 +58,9 @@ duplicate_LDADD = ../src/libmeshlink.la
 
 echo_fork_SOURCES = echo-fork.c
 echo_fork_LDADD = ../src/libmeshlink.la
+
+encrypted_SOURCES = encrypted.c
+encrypted_LDADD = ../src/libmeshlink.la
 
 import_export_SOURCES = import-export.c
 import_export_LDADD = ../src/libmeshlink.la
