--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,13 @@ Makefile.in
 !.astylerc
 core
 core.*
+vgcore.*
+tags
 /config.*
 /autom4te.cache
 /aclocal.m4
 /aminclude.am
+/ar-lib
 /compile
 /configure
 /depcomp
@@ -27,6 +30,5 @@ core.*
 /test-driver
 /stamp-h1
 /INSTALL
-ar-lib
-meshlink.layout
-*.cbp
+/meshlink-*
+/ChangeLog
