--- a/test/blackbox/run_blackbox_tests/Makefile.am
+++ b/test/blackbox/run_blackbox_tests/Makefile.am
@@ -45,7 +45,8 @@ run_blackbox_tests_SOURCES = \
 	test_cases_channel_close.c \
 	test_cases_channel_send.c \
 	test_cases_channel_shutdown.c \
-	test_cases_channel_conn.c
+	test_cases_channel_conn.c \
+	test_optimal_pmtu.c
 
 run_blackbox_tests_LDADD = ../../../src/libmeshlink.la $(LXC_LIBS) $(CMOCKA_LIBS)
 run_blackbox_tests_CFLAGS = -D_GNU_SOURCE $(LXC_CFLAGS) $(CMOCKA_CFLAGS)
