Add optimal pmtu test cases

--- a/test/blackbox/run_blackbox_tests/Makefile.am
+++ b/test/blackbox/run_blackbox_tests/Makefile.am
@@ -8,6 +8,8 @@ run_blackbox_tests_SOURCES = \
 	../common/tcpdump.c \
 	../common/common_handlers.c \
 	../common/test_step.c \
+	../common/network_namespace_framework.c \
+	../../utils.c \
 	test_cases_destroy.c \
 	test_cases_export.c \
 	test_cases_get_all_nodes.c \
@@ -46,8 +48,11 @@ run_blackbox_tests_SOURCES = \
 	test_cases_channel_send.c \
 	test_cases_channel_shutdown.c \
 	test_cases_channel_conn.c \
-	test_optimal_pmtu.c \
-	test_cases_get_all_nodes_by_dev_class.c
+	test_cases_get_all_nodes_by_dev_class.c \
+	../test_case_optimal_pmtu_01/node_sim_nut.c \
+	../test_case_optimal_pmtu_01/node_sim_relay.c \
+	../test_case_optimal_pmtu_01/node_sim_peer.c \
+	test_optimal_pmtu.c
 
 run_blackbox_tests_LDADD = ../../../src/libmeshlink.la $(LXC_LIBS) $(CMOCKA_LIBS)
 run_blackbox_tests_CFLAGS = -D_GNU_SOURCE $(LXC_CFLAGS) $(CMOCKA_CFLAGS)
