--- a/test/blackbox/run_blackbox_tests/Makefile.am
+++ b/test/blackbox/run_blackbox_tests/Makefile.am
@@ -52,7 +52,11 @@ run_blackbox_tests_SOURCES = \
 	../test_case_optimal_pmtu_01/node_sim_nut.c \
 	../test_case_optimal_pmtu_01/node_sim_relay.c \
 	../test_case_optimal_pmtu_01/node_sim_peer.c \
-	test_optimal_pmtu.c
+	test_optimal_pmtu.c \
+	../test_case_channel_blacklist_01/node_sim_nut_01.c \
+	../test_case_channel_blacklist_01/node_sim_peer_01.c \
+	../test_case_channel_blacklist_01/node_sim_relay_01.c \
+	test_cases_channel_blacklist.c
 
 run_blackbox_tests_LDADD = ../../../src/libmeshlink.la $(LXC_LIBS) $(CMOCKA_LIBS)
 run_blackbox_tests_CFLAGS = -D_GNU_SOURCE $(LXC_CFLAGS) $(CMOCKA_CFLAGS)
