--- a/test/blackbox/Makefile.am
+++ b/test/blackbox/Makefile.am
@@ -13,7 +13,12 @@ SUBDIRS = \
 	test_case_meta_conn_02 \
 	test_case_meta_conn_03 \
 	test_case_meta_conn_04 \
-	test_case_meta_conn_05
+	test_case_meta_conn_05 \
+	test_cases_submesh01 \
+	test_cases_submesh02 \
+	test_cases_submesh03 \
+	test_cases_submesh04
+
 
 gen_invite_SOURCES = util/gen_invite.c common/common_handlers.c common/test_step.c common/mesh_event_handler.c
 gen_invite_LDADD = ../../src/libmeshlink.la
