--- a/test/blackbox/run_blackbox_tests/Makefile.am
+++ b/test/blackbox/run_blackbox_tests/Makefile.am
@@ -56,7 +56,11 @@ run_blackbox_tests_SOURCES = \
 	../test_case_channel_blacklist_01/node_sim_nut_01.c \
 	../test_case_channel_blacklist_01/node_sim_peer_01.c \
 	../test_case_channel_blacklist_01/node_sim_relay_01.c \
-	test_cases_channel_blacklist.c
+	test_cases_channel_blacklist.c \
+	test_cases_submesh01.c \
+	test_cases_submesh02.c \
+	test_cases_submesh03.c \
+	test_cases_submesh04.c
 
 run_blackbox_tests_LDADD = ../../../src/libmeshlink.la $(LXC_LIBS) $(CMOCKA_LIBS)
 run_blackbox_tests_CFLAGS = -D_GNU_SOURCE $(LXC_CFLAGS) $(CMOCKA_CFLAGS)
