Check for astyle version 3 before formatting the code.
Unfortunately, code formatters change their behaviour between versions.
The code currently requires astyle version 3.x, so check this before
running astyle. If the wrong version is installed, print an error.

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,6 +20,7 @@ ChangeLog:
 	git log > ChangeLog
 
 astyle:
+	@astyle --version | grep -q "Version 3" || (echo 'ERROR: astyle version 3 required!' 1>&2 && exit 1)
 	astyle --options=.astylerc -nQ \
 		src/*.[ch] \
 		src/ed25519/e*.[ch] \
